Fixing table width on mobile

--- a/建設機械 _ SEN INTERNATIONAL_files/sen_style_mobile.css
+++ b/建設機械 _ SEN INTERNATIONAL_files/sen_style_mobile.css
@@ -619,7 +619,7 @@ dd.comment2 iframe {
 }
 
 table#table01 {
-	width: 950px;
+	width: 94%;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-collapse: collapse;
